--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       REDIS_HOST: redis
       REDIS_PORT: "6379"      
       REDIS_DB: "0"
-      REDIS_PASSWORD: "redis123"
+      REDIS_PASSWORD: ""
+      
   redis:
     image: redis:alpine
     container_name: my-redis
